--- a/dokka.gradle
+++ b/dokka.gradle
@@ -22,6 +22,7 @@ afterEvaluate { project ->
     final boolean kotlinLanguage = EasyDokkaUtils.with(project).isKotlin()
     final String dokkaFatJarVersion = EasyDokka.with(project).getDokkaFatJarVersion()
     final String dokkaFatJarPath = 'org/jetbrains/dokka/dokka-fatjar'
+    final String dokkaOutputFormat = EasyDokka.with(project).getDokkaOutputFormat()
     final String javaAPISpecificationLink = EasyDokkaUtils.getJavaAPISpecificationLink(JavaVersion.current().toString())
 
     task easyDokkaInitializer {
@@ -61,7 +62,7 @@ afterEvaluate { project ->
                         (srcDirsJavaNumber > 0) ? android.sourceSets.main.java.srcDirs[0] : '',
                         (srcDirsJavaNumber > 1) ? android.sourceSets.main.java.srcDirs[1] : '',
                         (srcDirsKotlinNumber > 0) ? android.sourceSets.main.kotlin.srcDirs[0] : '',
-                        '-output', "${buildDir}/javadoc", '-format', 'javadoc',
+                        '-output', "${buildDir}/${dokkaOutputFormat}", '-format', dokkaOutputFormat,
                         (classpathNumber > 0) ? '-classpath' : '', (classpathNumber > 0) ? classpath : '',
                         '-links', "https://developer.android.com/reference/^${android.sdkDirectory}/docs/reference/^${javaAPISpecificationLink}"
             } else {
@@ -71,9 +72,9 @@ afterEvaluate { project ->
         }
 
         task androidEasyDokkaJar(type: Jar, dependsOn: androidEasyDokka) {
-            classifier = 'javadoc'
+            classifier = dokkaOutputFormat
             destinationDir = buildDir
-            from "${buildDir}/javadoc"
+            from "${buildDir}/${dokkaOutputFormat}"
         }
     } else {
         task easyDokka(type: Exec, dependsOn: easyDokkaInitializer) {
@@ -94,7 +95,7 @@ afterEvaluate { project ->
                         (srcDirsJavaNumber > 0) ? sourceSets.main.java.srcDirs[0] : '',
                         (srcDirsJavaNumber > 1) ? sourceSets.main.java.srcDirs[1] : '',
                         (srcDirsKotlinNumber > 0) ? sourceSets.main.kotlin.srcDirs[0] : '',
-                        '-output', "${buildDir}/javadoc", '-format', 'javadoc',
+                        '-output', "${buildDir}/${dokkaOutputFormat}", '-format', dokkaOutputFormat,
                         '-links', javaAPISpecificationLink
             } else {
                 commandLine 'java', '-jar',
@@ -103,9 +104,9 @@ afterEvaluate { project ->
         }
 
         task easyDokkaJar(type: Jar, dependsOn: easyDokka) {
-            classifier = 'javadoc'
+            classifier = dokkaOutputFormat
             destinationDir = buildDir
-            from "${buildDir}/javadoc"
+            from "${buildDir}/${dokkaOutputFormat}"
         }
     }
 }
