--- a/dokka.gradle
+++ b/dokka.gradle
@@ -14,6 +14,18 @@
  * limitations under the License.
  */
 
+/**
+ * <p>EasyDokkaPlugin is a Gradle Script plugin to generate documentation by Dokka
+ * documentation engine in Javadoc or other formats for Java, Kotlin, Android and
+ * non-Android projects. It's very easy, you don't need to add to dependencies
+ * section additional classpath or think about compatibility issues, you don't
+ * need additional repositories also.</p>
+ *
+ * @author   Alexander Savin
+ * @version  1.1.0 Yokohama
+ * @since    1.0.0 Tokyo
+ */
+
 Class EasyDokka = new GroovyClassLoader(getClass().getClassLoader()).parseClass(EasyDokkaInitializer.downloadGroovyClass('https://raw.github.com/Vorlonsoft/EasyDokkaPlugin/master/EasyDokka.groovy', 'EasyDokka.groovy'))
 Class EasyDokkaUtils = new GroovyClassLoader(getClass().getClassLoader()).parseClass(EasyDokkaInitializer.downloadGroovyClass('https://raw.github.com/Vorlonsoft/EasyDokkaPlugin/master/EasyDokkaUtils.groovy', 'EasyDokkaUtils.groovy'))
 
@@ -108,10 +120,11 @@ afterEvaluate { project ->
  * documentation engine in Javadoc or other formats for Java, Kotlin, Android and
  * non-Android projects. It's very easy, you don't need to add to dependencies
  * section additional classpath or think about compatibility issues, you don't
- * need additional repositories also. </p>
+ * need additional repositories also.</p>
  * <p>EasyDokkaInitializer Class - class with EasyDokkaPlugin Gradle Script plugin initializers.</p>
  *
  * @author   Alexander Savin
+ * @version  1.1.0 Yokohama
  * @since    1.1.0 Yokohama
  */
 final class EasyDokkaInitializer {
