--- a/build.xml
+++ b/build.xml
@@ -32,7 +32,8 @@
                    header="EasyDokkaPlugin"
                    footer="EasyDokkaPlugin"
                    overview="override.html"
-                   private="false">
+                   private="false"
+                   extensions=".groovy:.gradle">
             <link packages="java.,org.xml.,javax.,org.xml."
                   href="https://docs.oracle.com/javase/8/docs/api/"/>
             <link packages="groovy.,org.codehaus.groovy."
