LIBbb10823 External documentation links updated

--- a/dokka.gradle
+++ b/dokka.gradle
@@ -59,7 +59,7 @@ afterEvaluate { project ->
         final String srcDirOne
         final String srcDirTwo
         final String srcDirThree
-        final String links
+        String links
         if (androidOs) {
             srcDirsJavaNumber = (byte) ((android.sourceSets.main.java.srcDirs != null) ? android.sourceSets.main.java.srcDirs.size() : 0)
             srcDirsKotlinNumber = (byte) ((kotlinLanguage && (android.sourceSets.main.kotlin.srcDirs != null)) ? android.sourceSets.main.kotlin.srcDirs.size() : 0)
@@ -68,7 +68,14 @@ afterEvaluate { project ->
             srcDirOne = (srcDirsJavaNumber > 0) ? android.sourceSets.main.java.srcDirs[0] : ''
             srcDirTwo = (srcDirsJavaNumber > 1) ? android.sourceSets.main.java.srcDirs[1] : ''
             srcDirThree = (srcDirsKotlinNumber > 0) ? android.sourceSets.main.kotlin.srcDirs[0] : ''
-            links = "https://developer.android.com/reference/^${android.sdkDirectory}/docs/reference/^${javaAPISpecificationLink}"
+            links = 'https://developer.android.com/reference/^https://developer.android.com/reference/package-list^^' +
+                    "file:///${android.sdkDirectory}/docs/reference/^file:///${android.sdkDirectory}/docs/reference/package-list^^" +
+                    "${javaAPISpecificationLink}^${javaAPISpecificationLink}"
+            if (javaAPISpecificationLink == 'https://docs.oracle.com/javase/10/docs/api/') {
+                links += 'element-list'
+            } else {
+                links += 'package-list'
+            }
             if (srcDirsJavaNumber > 0) {
                 mkdir android.sourceSets.main.java.srcDirs[0]
                 if (srcDirsJavaNumber > 1) {
